init itui :fire:

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "workspaces": [
     "packages/*",
+    "packages/@talves/*",
     "examples/*"
   ],
   "devDependencies": {
@@ -32,8 +33,7 @@
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.6"
   },
-  "resolutions": {
-  },
+  "resolutions": {},
   "jest": {
     "testMatch": [
       "**/packages/**/test/*.js"
