--- a/packages/@talves/itui-theme-provider/package.json
+++ b/packages/@talves/itui-theme-provider/package.json
@@ -14,7 +14,12 @@
     "@theme-ui/core": "^0.3.0-alpha.0",
     "@theme-ui/mdx": "^0.3.0-alpha.0"
   },
-  "repository": "system-ui/theme-ui",
+  "repository": "talves/theme-ui",
+  "files": [
+    "dist",
+    "src",
+    "README.md"
+  ],
   "author": "Tony Alves",
   "license": "MIT",
   "publishConfig": {
